# Task-3-OMP

./: Autotest.cpp  Autotest.h  CIntN.cpp  CIntN.h  CIntN_hori.cpp  CIntN_hori.h  CIntN_vert.cpp  CIntN_vert.h  CMakeLists.txt  Create.cpp  Create.h  Factory.cpp  Factory.h  Input.txt  README.md  Timer.h  exceptions.cpp  main.cpp
